--- a/tinyxml/CMakeLists.txt
+++ b/tinyxml/CMakeLists.txt
@@ -6,5 +6,5 @@ set(LIBS )
 
 __add_real_target(tinyxml lib SOURCE ${SRCS} DEF ${DEFS} LIB ${LIBS})
 
-INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} DESTINATION include/ FILES_MATCHING PATTERN "*.h")
+INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} DESTINATION include/tinyxml/ FILES_MATCHING PATTERN "*.h")
 set_property(TARGET tinyxml PROPERTY INTERFACE_INCLUDE_DIRECTORIES ${CMAKE_CURRENT_SOURCE_DIR})
