--- a/tinyxml/CMakeLists.txt
+++ b/tinyxml/CMakeLists.txt
@@ -7,4 +7,6 @@ set(LIBS )
 __add_real_target(tinyxml lib SOURCE ${SRCS} DEF ${DEFS} LIB ${LIBS}
 						INTERFACE ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/../)
 
-INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} DESTINATION include/ FILES_MATCHING PATTERN "*.h")
+if(CC_INSTALL_TINYXML)
+	INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} DESTINATION include/ FILES_MATCHING PATTERN "*.h")
+endif()
